# tinyamp_hmi

./: .gitignore  CMakeLists.txt  README.md  tinyamp_hmi.code-workspace
app/: main.cpp
doc/: state.md
include/: button_state.h  hmi.h  input_actuators_events_if.h  input_actuators_impl.h  input_events_if.h  input_events_impl.h  timer_service.h  timer_service_if.h
